sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 165 70 xxx
simstep 6 1
